<resources>
    <string name="app_name">SpeechEmo</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_recording">Start Recording</string>
    <string name="play_audio">Play Audio</string>
    <string name="speechemo">SpeechEmo</string>
    <string name="record_audio_page">Record Audio</string>
    <string name="upload_audio_file_page">Upload Audio File</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="play_audio_uploaded">Play Audio</string>
    <string name="upload_a_file_to_get_started">Upload a file to get started</string>
    <string name="file_ready_for_playback">File Ready for Playback</string>
    <string name="stop_playing">Stop Playing</string>
</resources>