<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speechemo"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnRecordAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio_page"
        android:layout_below="@+id/mainTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnUploadAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_audio_file_page"
        android:layout_below="@+id/btnRecordAudio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
