<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadAudioActivity">

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_audio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnPlayUploaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_audio_uploaded"
        android:layout_below="@+id/btnUpload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:enabled="false"/>

    <TextView
        android:id="@+id/playbackStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPlayUploaded"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/upload_a_file_to_get_started"
        android:textAppearance="?attr/textAppearanceListItem" />

</RelativeLayout>
